<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Report">

    <ImageView
        android:id="@+id/aybway_logo"
        android:layout_width="253dp"
        android:layout_height="165dp"
        android:layout_marginStart="109dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="109dp"
        android:contentDescription="@string/aybway_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ayb_way_logo_foreground"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aybway_logo"
        app:layout_constraintVertical_bias="0.307"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/trip_report"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:backgroundTint="#FF9800"
            android:text="@string/detailed_report"
            android:textAlignment="textStart"
            android:textSize="34sp"
            app:cornerRadius="0dp"
            app:icon="@mipmap/detailed_report_foreground"
            app:iconPadding="0dp"
            app:iconSize="110dp"
            tools:ignore="TextSizeCheck,TextContrastCheck" />

        <Button
            android:id="@+id/summary_report"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="#3F51B5"
            android:text="SUMMARY REPORT"
            android:textAlignment="textStart"
            android:textSize="34sp"
            app:cornerRadius="0dp"
            app:icon="@mipmap/summary_report_foreground"
            app:iconPadding="0dp"
            app:iconSize="110dp"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/btn_back2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="#03A9F4"
            android:text="@string/menu"
            android:textSize="34sp"
            app:cornerRadius="0dp"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/trip_report_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingTop="20dp"
        android:paddingRight="30dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aybway_logo"
        app:layout_constraintVertical_bias="0.036"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trip_report"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/select_report_type"
            android:textAlignment="center"
            android:textSize="24sp" />

        <RadioGroup
            android:id="@+id/report_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="current_trip"
                android:text="@string/current_trip"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="all_trips"
                android:text="@string/all_trips"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="custom_trip"
                android:text="@string/custom_trip"
                android:textSize="24sp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_print"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trip_report_layout"
        tools:layout_editor_absoluteX="31dp">

        <TextView
            android:id="@+id/selected_trip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_print"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#4CAF50"
            android:text="@string/print_report"
            android:textSize="34sp"
            app:cornerRadius="0dp" />

        <Button
            android:id="@+id/btn_back1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#FF0000"
            android:text="@string/back"
            android:textSize="34sp"
            app:cornerRadius="0dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_back"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trip_report_layout"
        app:layout_constraintVertical_bias="0.308"
        tools:layout_editor_absoluteX="0dp">

        <Button
            android:id="@+id/btn_back3"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="#FF0000"
            android:text="@string/back"
            android:textSize="34sp"
            app:cornerRadius="0dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>